Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-55112

When deleting a QGraphicsProxyWidget then it will crash while trying to reassign focus

    XMLWordPrintable

Details

    • cb08543c182585986fc7f76592c91c8994993d05 (qtbase/5.6, 16.8.2016, 5.6.2)

    Description

      [Windows]: When deleting a QGraphicsProxyWidget then it will crash while trying to reassign focus.

      This is due to the fact that the event filter is still in use on the widget inside the proxywidget although it is in the process of being deleted.

      Attachments

        1. qtbug55112_linux_stack.txt
          20 kB
        2. qtbug55112_valgrind_log.txt
          440 kB
        3. qtbug55112_windows_stack.txt
          14 kB
        4. qtbug55112.zip
          2 kB
        5. qtbug55112.zip
          1 kB

        Activity

          People

            kleint Friedemann Kleint
            andysh Andy Shaw
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: