~QGraphicsProxyWidget: Remove event filter on widget before deleting it

Prevent events being received on the widget during its destruction
phase.

Task-number: QTBUG-55112
Change-Id: I0d990fc69eee06b7e5af3845aa3f7627e3e3d5b9
Reviewed-by: Marc Mutz <marc.mutz@kdab.com>