src/widgets/graphicsview/qgraphicsproxywidget.cpp
@@ -513,6 +513,7 @@ QGraphicsProxyWidget::~QGraphicsProxyWidget()
 {
     Q_D(QGraphicsProxyWidget);
     if (d->widget) {
+        d->widget->removeEventFilter(this);
         QObject::disconnect(d->widget, SIGNAL(destroyed()), this, SLOT(_q_removeWidgetSlot()));
         delete d->widget;
     }
